--- a/Demo/appsettings.json
+++ b/Demo/appsettings.json
@@ -8,5 +8,14 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=.;Initial Catalog=StudentInfo;Integrated Security=True;Trust Server Certificate=True"
+    },
+
+    "Smtp": {
+        "Host": "smtp.example.com",
+        "Port": "587",
+        "Username": "aryanprajapati5523@gmail.com",
+        "Password": "bojvatecoqvsxjds",
+        "From": "aryanprajapati5523@gmail.com"
     }
-    }
+
+}
