--- a/Demo/appsettings.json
+++ b/Demo/appsettings.json
@@ -18,4 +18,10 @@
     //    "From": "aryanprajapati5523@gmail.com"
     //}
 
+    "Razorpay": {
+        "Key": "rzp_test_kLX7L8BYDbH8a2",
+        "Secret": "bqFMooSdJGjmiE7JagpU9YZS"
+    }
+    
+
 }
