--- a/Demo/appsettings.json
+++ b/Demo/appsettings.json
@@ -1,4 +1,5 @@
 {
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -9,7 +10,10 @@
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=.;Initial Catalog=StudentInfo;Integrated Security=True;Trust Server Certificate=True"
     },
-
+    "Razorpay": {
+        "Key": "rzp_test_kLX7L8BYDbH8a2",
+        "Secret": "bqFMooSdJGjmiE7JagpU9YZS"
+    },
     //"Smtp": {
     //    "Host": "smtp.example.com",
     //    "Port": "587",
@@ -18,10 +22,12 @@
     //    "From": "aryanprajapati5523@gmail.com"
     //}
 
-    "Razorpay": {
-        "Key": "rzp_test_kLX7L8BYDbH8a2",
-        "Secret": "bqFMooSdJGjmiE7JagpU9YZS"
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "Port": 587,
+        "Username": "aryanprajapati5523@gmail.com",
+        "Password": "qjqpozuuabxjbqvk",
+        "FromName": "EduMaster",
+        "FromAddress": "aryanprajapati5523@gmail.com"
     }
-    
-
 }
